--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Orchid Template</title> <!-- Change to Site name -->
 		<!-- FAVICON -->
-		<link rel="shortcut icon" href="" type="image/x-icon" />
+		<link rel="shortcut icon" href="//codecloud.cdn.speedyrails.net/sites/5d810c046e6f642cb7030000/image/vnd.microsoft.icon/1568918799000/favicon.ico" type="image/x-icon" />
 		
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
