--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 			
-			ga('create', 'UA-115200481-13', 'auto');
+			ga('create', '', 'auto');
 			ga('send', 'pageview');
 		</script>
 	</head>
@@ -33,8 +33,6 @@
 			<loader v-if="!dataLoaded"></loader>
 			<header-component :menu_items="menu_items" :social_media="social_media" v-if="dataLoaded"></header-component>
 			<div class="main_content_container" v-if="dataLoaded">
-			    
-			    
 				<transition name="custom-classes-transition" enter-active-class="fadeIn">
 					<router-view class="content" :locale="locale" :social_media="social_media"></router-view>
 				</transition>
