--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 			
-			ga('create', '', 'auto');
+			ga('create', 'UA-115200481-48', 'auto');
 			ga('send', 'pageview');
 		</script>
 	</head>
