Northgate Shopping Centre 1.0  /index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title></title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Northgate Shopping Centre</title> <!-- Change to Site name -->
+		<title>Northgate Shopping Centre</title> 
 		<!-- FAVICON -->
 		<link rel="shortcut icon" href="//codecloud.cdn.speedyrails.net/sites/5d810c046e6f642cb7030000/image/vnd.microsoft.icon/1568918799000/favicon.ico" type="image/x-icon" />
 		
