Northgate Shopping Centre 1.0  /index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<link rel="shortcut icon" href="//codecloud.cdn.speedyrails.net/sites/5d810c046e6f642cb7030000/image/vnd.microsoft.icon/1568918799000/favicon.ico" type="image/x-icon" />
 		
 		<!--new-->
-        <meta name="description" content="Northgate Shopping Centre">
-        <meta name="og:description" content="Northgate Shopping Centre">
-        <meta name="keywords" content="Northgate Shopping Centre, Northgate, Shops, Stores, Shopping Mall, Shopping Centre, Sales, Promotions, Retail, Events, North Bay">
-        <meta property="og:title" content="Northgate Shopping Centre">
+        <!--<meta name="description" content="Northgate Shopping Centre">-->
+        <!--<meta name="og:description" content="Northgate Shopping Centre">-->
+        <!--<meta name="keywords" content="Northgate Shopping Centre, Northgate, Shops, Stores, Shopping Mall, Shopping Centre, Sales, Promotions, Retail, Events, North Bay">-->
+        <!--<meta property="og:title" content="Northgate Shopping Centre">-->
 
 		
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
