--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- FAVICON -->
 		<link rel="shortcut icon" href="//codecloud.cdn.speedyrails.net/sites/5d810c046e6f642cb7030000/image/vnd.microsoft.icon/1568918799000/favicon.ico" type="image/x-icon" />
 		
-		<!--new-->
+		<!--static-->
         <!--<meta name="description" content="Northgate Shopping Centre">-->
         <!--<meta name="og:description" content="Northgate Shopping Centre">-->
         <!--<meta name="keywords" content="Northgate Shopping Centre, Northgate, Shops, Stores, Shopping Mall, Shopping Centre, Sales, Promotions, Retail, Events, North Bay">-->
